---
source: crates/rattler_build_recipe/src/stage0/parser/error_tests.rs
expression: error_with_source
---
  × Jinja template error: Failed to parse Jinja template: syntax error:
  │ unexpected `}`, expected `,` (in template:1)
   ╭─[invalid_jinja.yaml:2:9]
 1 │ package:
 2 │   name: "${{ name | invalid_filter(unclosed }}"
   ·         ──┬─
   ·           ╰── Failed to parse Jinja template: syntax error: unexpected `}`, expected `,` (in template:1)
 3 │   version: 1.0.0
   ╰────
